fix: resolving error with finding reactor when parentReactor is null, defining Class to extend IReactor (#1131)